name:                padpeek
version:             0.1.0.0
synopsis:            On-screen display of inputs on a gamepad
description:         
  Reads output from arduino-modded gamepad (see padpeek wiki) and displays the inputs on a gui for e.g. live-streaming.
homepage:            https://github.com/wuest/padpeek
license:             BSD3
license-file:        LICENSE
author:              Tina Wuest
maintainer:          tina@wuest.me
copyright:           (c) 2016 Tina Wuest
category:            Game
build-type:          Simple
cabal-version:       >= 1.10

-- executable padpeek-qt
--   default-language:    Haskell2010
--   hs-source-dirs:      src
--   main-is:             Main-qt.hs
--   ghc-options:         -threaded -static -Wall -fwarn-implicit-prelude -fwarn-monomorphism-restriction
--   build-depends:
--     base       >= 4.8 && < 5.0,
--     containers >= 0.5 && < 0.6,
--     text       >= 0.11 && < 1.3,
--     serialport >= 0.4.7 && < 0.5,
--     bytestring >= 0.10 && < 0.11,
--     time       >= 1.6 && < 1.7,
--     hsqml      == 0.3.*

executable padpeek-cli
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main-cli.hs
  ghc-options:         -threaded -static -Wall -fwarn-implicit-prelude -fwarn-monomorphism-restriction
  build-depends:
    base       >=4.8 && < 5.0,
    containers >= 0.5 && < 0.6,
    text       >= 0.11 && < 1.3,
    serialport >= 0.4.7 && < 0.5,
    bytestring >= 0.10 && < 0.11,
    time       >= 1.6 && < 1.7

executable padpeek-debug
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main-debug.hs
  ghc-options:         -threaded -static -Wall -fwarn-implicit-prelude -fwarn-monomorphism-restriction
  build-depends:
    base       >=4.8 && < 5.0,
    containers >= 0.5 && < 0.6,
    text       >= 0.11 && < 1.3,
    serialport >= 0.4.7 && < 0.5,
    bytestring >= 0.10 && < 0.11,
    time       >= 1.6 && < 1.7
